wallet_core/error_category/error_category_derive/tests/derive_error_category/fail_on_struct_missing_category.stderr
error: expected `category` attribute on struct `Error`
 --> tests/derive_error_category/fail_on_struct_missing_category.rs:4:1
  |
4 | struct Error {}
  | ^^^^^^
