wallet_core/error_category/error_category_derive/tests/derive_error_category/fail_on_struct_missing_category.rs
use error_category::ErrorCategory;

#[derive(ErrorCategory)]
struct Error {}

fn main() {}
